# project

./: .dockerignore  Dockerfile  docker-compose.yaml  pyproject.toml
src/: settings.py  urls.py
src/events/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/events/migrations/: 0001_initial.py  0002_mootcourtimage.py
src/technical/: admin.py  apps.py  models.py
src/technical/migrations/: 0001_initial.py  0002_alter_documents_options.py
src/users/: admin.py  apps.py  backends.py  models.py  serializers.py  urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_alter_team_date_field.py  0002_team.py  0002_userphoto.py  0003_remove_team_description_remove_team_name.py  0004_delete_team.py  0005_user_phone_number.py  0006_user_photo.py  0007_remove_user_date_birth_user_accept_invite_and_more.py
