[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["isaevivann <ivan.isaev7@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
psycopg2-binary = "^2.9.10"
django-theherk-events = "^1.8.1"
now = "^0.0.6"
django-email-users = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
